--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -14,7 +14,7 @@ build:
     post_create_environment:
       - pip install poetry
     post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install -E rich
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install -E rich --with docs
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
