--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,6 +50,11 @@ jobs:
         id: sp
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install Just
         uses: extractions/setup-just@v2
       - name: Install Dependencies
