--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,6 +183,7 @@ dev = [
     "pytest-timeout>=2.3.1",
     "ruff>=0.9.10",
     "pywinpty>=2.0.14; sys_platform == 'win32'",
+    "tomlkit>=0.13.2",
 ]
 docs = [
     "doc8>=1.1.2",
