--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -658,7 +658,7 @@ jobs:
       shell: powershell
     - name: Test CMD shell failure
       run: |
-        just test ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+        uv run pytest ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
       shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
