--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -660,7 +660,7 @@ jobs:
       shell: powershell
     - name: Test CMD shell failure
       run: |
-        just test-win-shell-failure
+        uv run pytest ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
       shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
