--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -727,7 +727,8 @@ jobs:
       shell: powershell
     - name: Test CMD shell failure
       run: |
-        uv run pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+        .venv\Scripts\activate.bat
+        pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
       shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
