--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -662,6 +662,11 @@ jobs:
         just test-powershell
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
+    - name: Test CMD shell failure
+      run: |
+        call .venv\Scripts\activate
+        pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+      shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
