--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -659,7 +659,7 @@ jobs:
     - name: Run Powershell Tab Completion Tests
       run: |
         just test ./tests/verify_environment.py
-        call .venv\Scripts\activate; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_powershell"
+        .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_powershell"
         just test-powershell
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
@@ -728,7 +728,7 @@ jobs:
     - name: Run Powershell Tab Completion Tests
       run: |
         just test ./tests/verify_environment.py
-        call .venv\Scripts\activate; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh"
+        .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh"
         just test-pwsh
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
